Wrote another method to make animation possible
Need to find a better way.

--- a/index.html
+++ b/index.html
@@ -23,17 +23,21 @@
         </header>
 
         <section class="card-section">
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <div class="colored-box"></div>
+
+            <div class="maincontainer">
+                <div class="card" id="card">
+                    <div class="front-card card-design formatting">
+                        <div class="deck-pattern"></div>
                     </div>
-                    <div class="flip-card-back">
-                    <h4 id="your-quote" class="formatting">Your random quote is:</h4>
-                    <p id="quote" class="formatting">Random quote here. Lorem ipsum</p>
+                    <div class="back-card card-design">
+                        <div class="quote-box">
+                            <h4 id="your-quote" class="formatting">Your random quote is:</h4>
+                            <p id="quote" class="formatting">Random quote here. Lorem ipsum</p>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </section>
 
         <section class="bottom">
