--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Quote generator</title>
-        <meta name="description" content="A quote generator by me, Simone Gattullo">
+        <title>Random teller</title>
+        <meta name="description" content="A random teller by me, Simone Gattullo">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/random-generator/resources/CSS/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,13 +25,13 @@
         <section class="card-section">
 
             <div class="maincontainer">
-                <div class="card" id="card">
+                <div class="cardbox" id="card">
                     <div class="front-card card-design formatting">
-                        <div class="deck-pattern"></div>
                     </div>
                     <div class="back-card card-design">
                         <div class="quote-box">
-                            <h4 id="your-quote" class="formatting">Your random quote is:</h4>
+                            <h4 class="formatting">Your random</h4> 
+                            <h4 class="formatting space">quote is:</h4>
                             <p id="quote" class="formatting">Random quote here. Lorem ipsum</p>
                         </div>
                     </div>
@@ -41,10 +41,12 @@
         </section>
 
         <section class="bottom">
+
             <div class="bottom__text">
                 <h2 class="formatting">Flip the card for a random quote!</h2>
                 <h3 class="formatting">This is a random project by The Great <strong>Simone Gattullo</strong></h3>
             </div>
+
         </section>
 
         <script src="/random-generator/resources/javascript/script.js" async defer></script>
