--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <div class="quote-box">
                             <h4 class="formatting">Your random</h4> 
                             <h4 class="formatting space">quote is:</h4>
+                            <div class="hidden-space"></div>
                             <p id="quote" class="formatting">Random quote here. Lorem ipsum</p>
                         </div>
                     </div>
